--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="usermanagement" basedir="." default="test">
+<project name="usermanagement" basedir="." default="compile">
 	
 	<property name="main-java-dir" value="${basedir}/src/main/java"/>
 	<property name="test-java-dir" value="${basedir}/src/test/java"/>
