--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -3,4 +3,4 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
 
-ua.nure.kn.bohutska.usermanagement.db.UserDao=ua.nure.kn.bohutska.usermanagement.db.HsqldbUserDao
+ua.nure.kn.bohutska.usermanagement.db.UserDao=ua.nure.kn.bohutska.usermanagement.db.HsqldbUserDAO
