--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -2,5 +2,5 @@ connection.driver=org.hsqldb.jdbcDriver
 connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
-
+dao.factory=ua.nure.kn.bohutska.usermanagement.db.DaoFactoryImpl
 ua.nure.kn.bohutska.usermanagement.db.UserDAO=ua.nure.kn.bohutska.usermanagement.db.HsqldbUserDAO
